# surv_ai

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
core/agent/: __init__.py  base.py  binary.py  decision.py  interfaces.py  invertor.py  moderator.py  research.py  skeptic.py
core/agent/debate/: analyst.py  select_winner.py  team_lead.py
core/assembly/: agent.py  debate.py  interfaces.py  research.py  voting_research.py
core/assembly/debate/: __init__.py  assembly.py  most_points.py  winner_take_all.py
core/assembly/debate/agents/: debate_moderator.py  debater_agent.py  select_winner.py  statement_invertor.py
core/assembly/research/: __init__.py  assembly.py
core/assembly/research/agents/: binary.py  research.py
core/conversation/: conversation.py  interfaces.py
core/embeddings/: interfaces.py  sbert.py
core/knowledge_base/: common_sense.py  interfaces.py
core/knowledge_store/: __init__.py  interfaces.py  local.py
core/memory_store/: __init__.py  interfaces.py  local.py
core/modelers/: interfaces.py  modeler.py
core/teams/: base.py  debate.py  estimator.py  interfaces.py
core/tools/: interfaces.py  noop.py  toolbelt.py
core/tools/query/: interfaces.py  news_media.py  wikipedia.py
core/tools/research/: interfaces.py  new_york_times.py  news_media.py  wikipedia.py
examples/: debate_team.txt
lib/: agent_log.py  log.py
lib/language/: anthropic.py  gpt.py  interfaces.py
lib/llm/: anthropic.py  gpt.py
lib/vector/: search.py
notebooks/: examples.ipynb
notebooks/agents/: research.ipynb  skeptic.ipynb
notebooks/assembly/: debate.ipynb  research.ipynb  voting_research.ipynb
notebooks/assembly/debate/: most_points.ipynb  winner_takes_all.ipynb
notebooks/teams/: debate.ipynb  estimator.ipynb
notebooks/tools/: new_york_times.ipynb  news_media.ipynb  wikipedia.ipynb
surv_ai/: __init__.py
surv_ai/core/: agent.py  interfaces.py  model.py  survey.py
surv_ai/core/agents/: binary.py  reasoning.py  web_page_summary.py
surv_ai/lib/: log.py
surv_ai/lib/conversation/: conversation.py  interfaces.py
surv_ai/lib/knowledge_store/: interfaces.py  local.py
surv_ai/lib/llm/: anthropic.py  gpt.py  interfaces.py
surv_ai/lib/tools/: interfaces.py  tool_belt.py
surv_ai/lib/tools/query/: dataframe.py  google_custom_search.py  interfaces.py  twitter.py  wikipedia.py
tests/: utils.py
tests/core/: test_model.py  test_survey.py
tests/core/agents/: test_binary.py  test_reasoning.py  test_webpage_summary.py
tests/lib/: test_log.py
tests/lib/conversation/: test_conversation.py
tests/lib/knowledge_store/: test_local.py
tests/lib/llm/: test_anthropic.py  test_gpt.py
tests/lib/tools/: test_toolbelt.py
tests/lib/tools/query/: test_dataframe.py  test_google_custom_search.py  test_twitter.py  test_wikipedia.py
