[tool.poetry]
name = "superintelligence"
version = "0.1.0"
description = "Become a SuperIntelligence."
authors = ["Daniel Balsam"]
license = "GNU"
readme = "README.md"

[tool.black]
line-length = 79

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
aiohttp = "^3.8.4"
pydantic = "^1.10.7"
flake8 = "^6.0.0"
black = "^23.3.0"
python-dotenv = "^1.0.0"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"
isort = "^5.12.0"
beautifulsoup4 = "^4.12.2"
sentence-transformers = "^2.2.2"
tqdm = "^4.65.0"
ipywidgets = "^8.0.6"
faiss-cpu = "^1.7.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
