[tool.poetry]
name = "HyperAssemvly"
version = "0.1.0"
description = "Multi-agent modeling with large language models"
authors = ["Daniel Balsam"]
license = "GNU"
readme = "README.md"

[tool.black]
line-length = 79

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
colorama = "^0.4.6"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
