[tool.poetry]
name = "surv_ai"
version = "0.2.0"
description = "A framework for multi-agent modeling using large language models"
authors = ["Daniel Balsam <daniel.balsam@survai.org>"]
license = "MIT"
readme = "README.md"
keywords=[
    "ai",
    "artificial intelligence",
    "data science",
    "statistics",
    "models",
    "llm",
    "agents",
    "survai",
    "surv_ai",
    "survey",
    "multi-agent",
    "large language model",
    "artificial intelligence",
    "machine learning",
    "natural language processing",
    "nlp",
    "sentiment analysis",
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
include = [
    "LICENSE",
]
"repository" = "https://github.com/DanielBalsam/surv_ai"
"documentation" = "https://github.com/DanielBalsam/surv_ai/blob/main/README.md"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
colorama = "^0.4.6"
exceptiongroup = "^1.1.1"
requests = "^2.31.0"
snscrape = "^0.6.2.20230320"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
matplotlib = "^3.7.1"
pytest = "^7.3.1"
mock = "^5.0.2"
pytest-asyncio = "^0.21.0"
pandas = "^2.0.2"
snscrape = {git = "https://github.com/JustAnotherArchivist/snscrape.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
